Correcting margin issues on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ h2 {
 	margin: 0;
 	color: #121d1f;
 	font-weight: 700;
-	margin-bottom: 30px;
+	margin-bottom: 50px;
 	font-size: 34px;
 }
 h3, h4 {
@@ -259,7 +259,7 @@ hr {
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff', GradientType=0 ); /* IE6-9 */
 }
 .categories {
-	padding-bottom: 30px;
+	padding-bottom: 50px;
 	text-align: center;
 }
 ul.cat li {
